app/ui/globals.css
@import "tailwindcss";
@import "tw-animate-css";

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
  --color-sidebar-ring: var(--sidebar-ring);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar: var(--sidebar);
  --color-chart-5: var(--chart-5);
  --color-chart-4: var(--chart-4);
  --color-chart-3: var(--chart-3);
  --color-chart-2: var(--chart-2);
  --color-chart-1: var(--chart-1);
  --color-ring: var(--ring);
  --color-input: var(--input);
  --color-border: var(--border);
  --color-destructive: var(--destructive);
  --color-accent-foreground: var(--accent-foreground);
  --color-accent: var(--accent);
  --color-muted-foreground: var(--muted-foreground);
  --color-muted: var(--muted);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-secondary: var(--secondary);
  --color-primary-foreground: var(--primary-foreground);
  --color-primary: var(--primary);
  --color-popover-foreground: var(--popover-foreground);
  --color-popover: var(--popover);
  --color-card-foreground: var(--card-foreground);
  --color-card: var(--card);
  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);

  --font-poppins: Poppins, sans-serif;
  --color-berry: rgba(195, 31, 112, 1);
  --color-berry-light: rgba(255, 237, 246, 1);
  --color-palo-verde: rgba(39, 153, 137, 1);
  --color-palo-verde-light: rgba(239, 247, 239, 1);
  --color-lagunita: rgba(0, 124, 146, 1);
  --color-lagunita-light: rgba(107, 155, 172, 1);
  --color-lagunita-lighter: rgba(240, 251, 253, 1);
  --color-navy: rgba(14, 59, 79, 1);
  --color-charcoal: rgba(52, 52, 52, 1);
  --color-grey-med: rgba(247, 248, 255, 1);
  --color-grey-med-dark: rgba(215, 215, 215, 1);
  --color-grey-light: rgba(251, 251, 255, 1);
  --color-grey-border: rgba(207, 207, 207, 1);

  --color-badge-green: rgba(135, 205, 168, 1);
  --color-badge-yellow: rgba(253, 225, 131, 1);
  --color-badge-red: rgba(249, 80, 72, 1);
  --color-badge-orange: rgba(253, 141, 67, 1);
  --text-lg-title: 20px;
  --color-border-dark: rgba(80, 80, 80, 1);
}

:root {
  --background: oklch(1 0 0);
  --foreground: rgba(0, 0, 0, 1);
  --radius: 0.625rem;
  --card:  oklch(0.985 0 0);;
  --card-background: rgba(247, 248, 255, 1);
  --card-foreground: oklch(0.145 0 0);
  --popover: oklch(1 0 0);
  --popover-foreground: oklch(0.145 0 0);
  --primary: oklch(0.205 0 0);
  --primary-foreground: oklch(0.985 0 0);
  --secondary: oklch(0.97 0 0);
  --secondary-foreground: oklch(0.205 0 0);
  --secondary-background: rgba(255, 255, 255, 1);
  --muted: oklch(0.97 0 0);
  --muted-foreground: oklch(0.556 0 0);
  --results-blue-background: rgba(255, 255, 255, 1);
  --results-white-background: rgba(255, 255, 255, 1);
  --results-year-background: rgba(233, 255, 251, 1);
  --accent: oklch(0.97 0 0);
  --accent-foreground: oklch(0.205 0 0);
  --destructive: oklch(0.577 0.245 27.325);
  --border: oklch(0.922 0 0);
  --input: oklch(0.922 0 0);
  --input-color: --color-charcoal;
  --input-border-color: rgba(208, 213, 221, 1);
  --input-background: rgba(255, 255, 255, 1);
  --ring: oklch(0.708 0 0);
  --chart-1: oklch(0.646 0.222 41.116);
  --chart-2: oklch(0.6 0.118 184.704);
  --chart-3: oklch(0.398 0.07 227.392);
  --chart-4: oklch(0.828 0.189 84.429);
  --chart-5: oklch(0.769 0.188 70.08);
  --sidebar: oklch(0.985 0 0);
  --sidebar-foreground: oklch(0.145 0 0);
  --sidebar-primary: oklch(0.205 0 0);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.97 0 0);
  --sidebar-accent-foreground: oklch(0.205 0 0);
  --sidebar-border: oklch(0.922 0 0);
  --sidebar-ring: oklch(0.708 0 0);
  --background: oklch(1 0 0);
  --foreground: oklch(0.145 0 0);
}

.dark {
  --background: oklch(0.145 0 0);
  --foreground: rgba(255, 255, 255, 1);
  --card: rgba(35, 35, 35, 1);
  --card-background: rgba(35, 35, 35, 1);
  --card-foreground: oklch(0.985 0 0);
  --popover: oklch(0.205 0 0);
  --popover-foreground: oklch(0.985 0 0);
  --primary: oklch(0.922 0 0);
  --primary-foreground: oklch(0.205 0 0);
  --secondary: rgba(35, 35, 35, 1);
  --secondary-foreground:  oklch(0.985 0 0);;
  --secondary-background: rgba(18, 18, 18, 1);
  --muted: oklch(0.269 0 0);
  --results-blue-background: rgba(25, 47, 57, 1);
  --results-white-background:  oklch(0.145 0 0);
  --results-year-background:  oklch(0.145 0 0);
  --muted-foreground: oklch(0.708 0 0);
  --accent: oklch(0.269 0 0);
  --accent-foreground: oklch(0.985 0 0);
  --destructive: oklch(0.704 0.191 22.216);
  --border:  rgba(80, 80, 80, 1);
  --input: rgba(80, 80, 80, 1);
  --input-text: rgba(255, 255, 255, 1);
  --input-background:rgba(35, 35, 35, 1);
  --input-border-color: rgba(80, 80, 80, 1);
  --ring: oklch(0.556 0 0);
  --chart-1: oklch(0.488 0.243 264.376);
  --chart-2: oklch(0.696 0.17 162.48);
  --chart-3: oklch(0.769 0.188 70.08);
  --chart-4: oklch(0.627 0.265 303.9);
  --chart-5: oklch(0.645 0.246 16.439);
  --sidebar: oklch(0.205 0 0);
  --sidebar-foreground: oklch(0.985 0 0);
  --sidebar-primary: oklch(0.488 0.243 264.376);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.269 0 0);
  --sidebar-accent-foreground: oklch(0.985 0 0);
  --sidebar-border: oklch(1 0 0 / 10%);
  --sidebar-ring: oklch(0.556 0 0);
}

@layer base {
  * {
    border-color: var(--border);
    outline-offset: 2px;
  }
  body {
    background-color: var(--background);
    color: var(--foreground);
  }
}

html {
 font-size: 17.5px;
}

body {
  font-family: "Open Sans", Arial, Helvetica, sans-serif;
}

input,
select {
  min-height: 48px;
}

